Current

Current

Added: Support for enums (Adrian Muraru)

1.19
2011/10/10
Added: commandDescriptionKey to @Parameters, to allow internationalized command descriptions
Added: JCommander#setParameterDescriptionComparator for better control over usage()
Fixed: Fields of type Set (HashSet and SortedSet) are now supported
Fixed: defaults for commands were not properly applied (Stevo Slavic)
Fixed: "-args=a=b,b=c" was not being parsed correctly (Michael Lancaster)
Fixed: GITHUB-73: descriptionKey was being ignored on main parameters

1.18
2011/07/20

Added: Default converter factories can be overridden (Scott Clasen)
Added: IParameterValidator
Added: Don't display "Options:" if none were defined
Added: Enforce that the type of the main parameter is a List
Added: usage() now displays the options for each command as well
Fixed: Default values with a validator were being validate at parse() time instead of creation time.
Fixed: Exception when using an @ file with empty lines between options
Fixed: OOM when parsing certain descriptions with long URL's in them

1.15
2011/01/24

Added: Added a constructor that takes a Bundle only, https://github.com/cbeust/jcommander/pull/47 (Russell Egan)
Fixed: NPE with calling getCommandDescription() of an unknown command

1.13
2010/12/15

Added: Boolean parameters with arity 0 (e.g. "foo -debug")
Fixed: JCommander would sometimes just print a stack trace and continue, now rethrowing.

1.7
2010/09/06

Added: Command usages are now shown in the order they were added to the JCommander object
Fixed: JCommander now compatible with Java 5
Fixed: Minor bug in the command display (Marc Ende)

1.6
2010/08/28

Added: @Parameters(commandDescription = "command description")
Added: now throwing an exception if required main parameters are not supplied
Fixed: usage() was changing default values after two runs (jstrachan)

1.5
2010/08/15

Added: overloaded versions of usage() with StringBuilders
Added: inheritance support (Guillaume Sauthier)