@@ -2,6 +2,7 @@ Current
 
 Current
 
+Added: @Parameter(commandNames) so that command names can be specified with annotations
 Added: Support for enums (Adrian Muraru)
 
 1.19
